[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daisy-mrd"
version = "0.1.0"
description = "DAISY-MRD: Distributed Analysis of Integrated Sites for Yielding MRD — WGS-based measurable residual disease monitoring in pediatric AML"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dana Dayan" },
    { name = "Yosef Maruvka" },
]
keywords = ["MRD", "AML", "leukemia", "WGS", "bioinformatics", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
daisy-mrd = "daisy_mrd.cli:main"

[project.urls]
Repository = "https://github.com/maruvka-lab/daisy-mrd"

[tool.setuptools.packages.find]
where = ["."]
include = ["daisy_mrd*"]

[tool.setuptools.package-data]
"daisy_mrd.data" = ["*.csv", "*.tsv", "*.txt"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=daisy_mrd --cov-report=term-missing"
